--- a/kuka_kr6r900sixx_moveit_config/config/fake_controllers.yaml
+++ b/kuka_kr6r900sixx_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,6 @@
-controller_list:
-  - name: fake_manipulator_controller
+controller_names:
+  - fake_arm_controller
+fake_arm_controller:
     joints:
       - joint_a1
       - joint_a2
@@ -7,6 +8,5 @@ controller_list:
       - joint_a4
       - joint_a5
       - joint_a6
-initial:  # Define initial robot poses.
-  - group: manipulator
-    pose: all-zeros
+initial:
+   arm: ready
