--- a/kuka_kr6r900sixx_moveit_config/config/joint_limits.yaml
+++ b/kuka_kr6r900sixx_moveit_config/config/joint_limits.yaml
@@ -2,39 +2,39 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 
-# For beginners, we downscale velocity and acceleration limits.
-# You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
-default_velocity_scaling_factor: 1.0
-default_acceleration_scaling_factor: 1.0
+# As MoveIt! does not support jerk limits, the acceleration limits provided here are the highest values that guarantee
+# that no jerk limits will be violated. More precisely, applying Euler differentiation in the worst case (from min accel
+# to max accel in 1 ms) the acceleration limits are the ones that satisfy
+# max_jerk = (max_acceleration - min_acceleration) / 0.001
 
 joint_limits:
   joint_a1:
     has_velocity_limits: true
-    max_velocity: 3.67
+    max_velocity: 2.1750
     has_acceleration_limits: true
-    max_acceleration: 0.734
+    max_acceleration: 3.75
   joint_a2:
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.1750
     has_acceleration_limits: true
-    max_acceleration: 0.664
+    max_acceleration: 1.875
   joint_a3:
     has_velocity_limits: true
-    max_velocity: 3.67
+    max_velocity: 2.1750
     has_acceleration_limits: true
-    max_acceleration: 0.734
+    max_acceleration: 2.5
   joint_a4:
     has_velocity_limits: true
-    max_velocity: 6.98
+    max_velocity: 2.1750
     has_acceleration_limits: true
-    max_acceleration: 1.396
+    max_acceleration: 3.125
   joint_a5:
     has_velocity_limits: true
-    max_velocity: 6.98
+    max_velocity: 2.6100
     has_acceleration_limits: true
-    max_acceleration: 1.396
+    max_acceleration: 3.75
   joint_a6:
     has_velocity_limits: true
-    max_velocity: 10.47
+    max_velocity: 2.6100
     has_acceleration_limits: true
-    max_acceleration: 2.094
+    max_acceleration: 5.0
