--- a/kuka_kr6r900sixx_moveit_config/config/kinematics.yaml
+++ b/kuka_kr6r900sixx_moveit_config/config/kinematics.yaml
@@ -1,4 +1,4 @@
-manipulator:
+kr6r900sixx_arm:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.015
+  kinematics_solver_timeout: 0.05
