--- a/kuka_kr6r900sixx_moveit_config/config/kr6r900sixx_controllers.yaml
+++ b/kuka_kr6r900sixx_moveit_config/config/kr6r900sixx_controllers.yaml
@@ -1,7 +1,7 @@
 controller_names:
-  - arm_controller
+  - kr6r900sixx_arm_controller
 
-arm_controller:
+kr6r900sixx_arm_controller:
   action_ns: follow_joint_trajectory
   type: FollowJointTrajectory
   default: true
